--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ available and free for everybody do download and use. Click on the MODELS link a
 interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/climatevoices/schmittner/"> Here </a> is an interview about my life and career as part of OSU's Voices of a Warming Planet project.</p>
 
 <div><a id="opportunity"><h2>Opportunity</h2></a>
-<p>I'm looking for a graduate student interested in working on <a href="http://people.oregonstate.edu/~schmita2/Projects/Nd/">modeling global ocean circulation and the cycling of Neodymium</a>. 
+<p>I'm looking for a graduate student interested in working on <a href="Projects/Nd/">modeling global ocean circulation and the cycling of Neodymium</a>. 
 If you have a good physical sciences
 and math background, if you're interested in numerical modeling, climate and paleoceanography this is the project 
 for you. Contact me for questions and/or apply to our graduate program in 
