--- a/publications.html
+++ b/publications.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Publications Andreas Schmittner</title>
-<link rel="stylesheet" type="text/css" href="http://people.oregonstate.edu/~schmita2/test2.css">
+<link rel="stylesheet" type="text/css" href="test2.css">
 </head>
 <body>
 <h1> Andreas Schmittner's Publications</h1>
