--- a/Projects/Nd/index.html
+++ b/Projects/Nd/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Modeling the Ocean Distribution of Neodymium Isotopes: Testing the Bottom-Up Hypothesis</title>
-<link rel="stylesheet" type="text/css" href="http://people.oregonstate.edu/~schmita2/test2.css">
+<link rel="stylesheet" type="text/css" href="../../test2.css">
 </head>
 
 <body>
