--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Quantifying the Modern and Glacial Ocean's Carbon Cycle Including Isotopes</title>
-<link rel="stylesheet" type="text/css" href="http://people.oregonstate.edu/~schmita2/test2.css">
+<link rel="stylesheet" type="text/css" href="https://andreasschmittner.github.io/test2.css">
 </head>
 
 <body>
