added missing files

--- a/climate_change.html
+++ b/climate_change.html
@@ -147,7 +147,7 @@ documentary &quot;Climate of Doubt&quot;</a>
 <p>Let me know (aschmitt(at)coas.oregonstate.edu) of inaccuracies in the above sites or
 if you know if additional sites.<br>
 
-<a href="http://people.oregonstate.edu/~schmita2/">back</a><br>
+<a href="https://andreasschmittner.github.io/">back</a><br>
 
 Last updated Apr 16, 2019</p>
 </div>
