--- a/Projects/Nd/index.html
+++ b/Projects/Nd/index.html
@@ -13,8 +13,8 @@
 
 <div style="width:1100px;float:left;margin-bottom:25px;">
 <ul class="menue">
-<li class="menue"><a class="menue" href="http://people.oregonstate.edu/~schmita2">Andreas' Home</a></li>
-<li class="menue"><a class="menue" href="http://people.oregonstate.edu/~schmita2/projects.html">Andreas' Projects</a></li>
+<li class="menue"><a class="menue" href="https://andreasschmittner.github.io">Andreas' Home</a></li>
+<li class="menue"><a class="menue" href="https://andreasschmittner.github.io/projects.html">Andreas' Projects</a></li>
 <li class="menue"><a class="menue" href="#opportunity">Opportunity</a></li>
 <li class="menue"><a class="menue" href="#publications">Publications</a></li>
 <li class="menue"><a class="menue" href="#presentations">Presentations</a></li>
@@ -74,7 +74,7 @@
 <div id="people" style="width:1100px;float:left">
 <a id="people"><h2>People</h2></a>
 <ul>
-<li><a href="http://people.oregonstate.edu/~schmita2/">Andreas Schmittner</a>, Principle Investigator<br>
+<li><a href="https://andreasschmittner.github.io/">Andreas Schmittner</a>, Principle Investigator<br>
 <li><a href="https://ceoas.oregonstate.edu/profile/haley/">Brian Haley</a>, Co-PI<br>
 <li><a href="https://jianghuidu.github.io/">Jianghui Du</a>, Collaborator<br>
 <li><a href="https://www.earth.ox.ac.uk/people/samar-khatiwala/">Samar Khatiwala</a>, Collaborator<br>
