--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <h1>Andreas Schmittner</h1>
 <p>Professor</p>
 <p>CV<a class="publinks" href="CV.pdf">long</a><a class="publinks" href="CV_short2017.pdf"> short</a></p>
+<p><a class="publinks" href="https://drive.google.com/file/d/1f3BaqDykk7aBwIKfHJ4_Klw53ll0nlBA/view?usp=sharing"> GD test</a></p>
 </div><!--name-->
 
 <div style="height:100px;width:290px;float:left;margin-top:60px">
