added UVic_2.8 link to Google Drive

--- a/Models/OSUVic/index.html
+++ b/Models/OSUVic/index.html
@@ -64,7 +64,7 @@ of the NSF funded project PALEOVAR.</p>
 <p>Other items you may need:
 <ul>
 <li><a href="download/mk_eby_24jan08">mk_eby_24jan08</a> (modified mk script)
-<li><a href="download/UVic_2.8.coupled.tar.gz">UVic 2.8.coupled</a> (our installation of the UVic model including a few differences from the original version)
+<li><a href="https://drive.google.com/file/d/1DpIv86yn_FVvM3HtkqrNS3WesJfB8X19/view?usp=sharing">UVic 2.8.coupled</a> (our installation of the UVic model including a few differences from the original version)
 <li><a href="download/inipar.F">inipar.F</a> (modified OASIS routine; see installation instructions)
 </ul>
 <p>For questions about installation or use contact Andreas Schmittner.</p>
