added OSUVic link to Google Drive

--- a/Models/OSUVic/index.html
+++ b/Models/OSUVic/index.html
@@ -49,7 +49,7 @@ of the NSF funded project PALEOVAR.</p>
 
 <div><a id="download"><h2>Download</h2></a>
 <ul>
-<li> <a href="download/OSUVic0.4.tar.gz">OSUVic0.4</a>
+<li> <a href="https://drive.google.com/file/d/16iAv9KUQ-qjJpj24dvgdgVnU2HOGH263/view?usp=sharing">OSUVic0.4</a>
 </ul>
 </div>
 
