--- a/Models/OSUVic/index.html
+++ b/Models/OSUVic/index.html
@@ -49,7 +49,7 @@ of the NSF funded project PALEOVAR.</p>
 
 <div><a id="download"><h2>Download</h2></a>
 <ul>
-<li> <a href="https://drive.google.com/file/d/16iAv9KUQ-qjJpj24dvgdgVnU2HOGH263/view?usp=sharing">OSUVic0.4</a>
+<li> <a href="https://zenodo.org/record/4435284/files/OSUVic0.4.tar.gz?download=1">OSUVic0.4</a>
 </ul>
 </div>
 
@@ -63,9 +63,9 @@ of the NSF funded project PALEOVAR.</p>
 
 <p>Other items you may need:
 <ul>
-<li><a href="download/mk_eby_24jan08">mk_eby_24jan08</a> (modified mk script)
-<li><a href="https://drive.google.com/file/d/1DpIv86yn_FVvM3HtkqrNS3WesJfB8X19/view?usp=sharing">UVic 2.8.coupled</a> (our installation of the UVic model including a few differences from the original version)
-<li><a href="download/inipar.F">inipar.F</a> (modified OASIS routine; see installation instructions)
+<li><a href="https://zenodo.org/record/4435284/files/mk_eby_24jan08?download=1">mk_eby_24jan08</a> (modified mk script)
+<li><a href="https://zenodo.org/record/4435284/files/UVic_2.8.coupled.tar.gz?download=1">UVic 2.8.coupled</a> (our installation of the UVic model including a few differences from the original version)
+<li><a href="https://zenodo.org/record/4435284/files/inipar.F?download=1">inipar.F</a> (modified OASIS routine; see installation instructions)
 </ul>
 <p>For questions about installation or use contact Andreas Schmittner.</p>
 
