add data link for oxygen paper

--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -88,6 +88,17 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 
 <div id="publications" style="width:1100px;float:left">
 <a id="publications"><h2>Publications</h2></a>
+<li>Cliff, E., S. Khatiwala, and A. Schmittner (2021)<br> 
+	<b>Glacial deep ocean deoxygenation driven by biologically mediated air–sea disequilibrium</b>
+	<div class="journal"><i>Nat Geosci</i>, 
+		<a class="publinks" href="https://doi.org/10.1038/s41561-020-00667-z">doi: 10.1038/s41561-020-00667-z</a>.
+	<div class="publinks">
+		<a class="publinks" href="https://www.nature.com/articles/s41561-020-00667-z">html</a>
+		<a class="publinks" href="https://rdcu.be/cc2Cs">pdf</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.4078981">data</a>
+	</div>
+</li>
+
 <li>Khatiwala, S., A. Schmittner and J. Muglia (2019)<br>
 <b>Air-sea disequilibrium enhances ocean carbon storage during glacial periods</b>
 <div class="journal"><i>Science Advances</i>, 5(6), doi: 10.1126/sciadv.aaw4981</div>
