--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ Atmospheric Sciences</a>.</p>
 	<div class="publinks">
 		<a class="publinks" href="https://www.nature.com/articles/s41561-020-00667-z">html</a>
 		<a class="publinks" href="https://rdcu.be/cc2Cs">pdf</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.4078981">data</a>
 	</div>
 </li>
 
