--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,7 @@
 	<div class="publinks">
 		<a class="publinks" href="https://www.nature.com/articles/s41561-020-00667-z">html</a>
 		<a class="publinks" href="https://rdcu.be/cc2Cs">pdf</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.4078981">data</a>
 	</div>
 </li>
 
