fixed stylefile link in LGM Tides

--- a/Projects/Completed/LGM_tides/index.html
+++ b/Projects/Completed/LGM_tides/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Collaborative Research: Assessing the Impact of Tidal Mixing on the Meridional Overturning Circulation of the Last Glacial Maximum</title>
-<link rel="stylesheet" type="text/css" href="http://people.oregonstate.edu/~schmita2/test2.css">
+<link rel="stylesheet" type="text/css" href="https://andreasschmittner.github.io/test2.css">
 </head>
 
 <body>
