fixed link in PMIP

--- a/Projects/Completed/PMIP/index.html
+++ b/Projects/Completed/PMIP/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Assessing Climate Model Simulations of Last Glacial Maximum Ocean Circulation With Carbon Isotopes</title>
-<link rel="stylesheet" type="text/css" href="http://andreasschmittner.github.io/test2.css">
+<link rel="stylesheet" type="text/css" href="https://andreasschmittner.github.io/test2.css">
 </head>
 
 <body>
