--- a/publications.html
+++ b/publications.html
@@ -397,7 +397,7 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 <li>Schmittner, A., Silva, T. A. M., Fraedrich, K., Kirk, E. and Lunkeit, F. (2011)<br>
 <b>Effects of Mountains and Ice Sheets on Global Ocean Circulation</b>
 <div class="journal"><i>J. Climate,</i> 24, 2814-2829, doi:10.1175/2010JCLI3982.1.</div>
-<div class="publinks"><a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner11jcl.pdf"> pdf </a><a class="publinks" href="http://journals.ametsoc.org/doi/abs/10.1175/2010JCLI3982.1"> html </a><a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner11jcl_sup.pdf"> Supplementary Material </a><a class="publinks" href="http://oregonstate.edu/ua/ncs/archives/2011/jun/scientists-unlock-keys-global-ocean-circulation"> Press Release </a></div>
+<div class="publinks"><a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner11jcl.pdf"> pdf </a><a class="publinks" href="http://journals.ametsoc.org/doi/abs/10.1175/2010JCLI3982.1"> html </a><a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner11jcl_sup.pdf"> Supplementary Material </a><a class="publinks" href="http://oregonstate.edu/ua/ncs/archives/2011/jun/scientists-unlock-keys-global-ocean-circulation"> Press Release </a><a class="publinks" href="https://zenodo.org/record/4435284#.X_8eyl6IZTY"> Code </a></div>
 
 <li>Alder, C. J., Hostetler, S. W., Pollard, D., and Schmittner, A. (2011)</br>
 <b>Evaluation of a present-day climate simulation with a new coupled atmosphere-ocean model GENMOM</b>
