added Chris' new manuscript

--- a/publications.html
+++ b/publications.html
@@ -57,12 +57,16 @@
 <a class="publinks" href="#2020"> 2020 </a>
 
 <a id="in review"><h3>In Review / In Press</h3></a>
+<li>Somes, C., A. Dale, K. Wallmann, F. Scholz, W. Yao, A. Oschlies, J. Muglia, A. Schmittner, and E. Achterberg(2021)<br> 
+	<b>Constraining global marine iron source and scavenging fluxes with GEOTRACES dissolved iron measurements in an ocean biogeochemical model</b>
+	<div class="journal"><i>Global Biogeochemical Cycles</i> </div>
+</li>
 
 <h3>Published</h3>
 <a id="2021"><h4>2021</h4></a>
 <li>Cliff, E., S. Khatiwala, and A. Schmittner (2021)<br> 
 	<b>Glacial deep ocean deoxygenation driven by biologically mediated air–sea disequilibrium</b>
-	<div class="journal"><i>Nat Geosci</i>, 
+	<div class="journal"><i>Nat Geosci</i>, </div>
 		<a class="publinks" href="https://doi.org/10.1038/s41561-020-00667-z">doi: 10.1038/s41561-020-00667-z</a>.
 	<div class="publinks">
 		<a class="publinks" href="https://www.nature.com/articles/s41561-020-00667-z">html</a>
