fixed Cliff ref

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Atmospheric Sciences</a>.</p>
 <li>Cliff, E., S. Khatiwala, and A. Schmittner (2021)<br> 
 	<b>Glacial deep ocean deoxygenation driven by biologically mediated air–sea disequilibrium</b>
 	<div class="journal"><i>Nat Geosci</i>, 
-		<a class="publinks" href="https://doi.org/10.1038/s41561-020-00667-z">doi: 10.1038/s41561-020-00667-z</a>.
+		<a class="publinks" href="https://doi.org/10.1038/s41561-020-00667-z">doi: 10.1038/s41561-020-00667-z</a>.</div>
 	<div class="publinks">
 		<a class="publinks" href="https://www.nature.com/articles/s41561-020-00667-z">html</a>
 		<a class="publinks" href="https://rdcu.be/cc2Cs">pdf</a>
