added link for Chris' manuscript

--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,11 @@
 <li>Somes, C., A. Dale, K. Wallmann, F. Scholz, W. Yao, A. Oschlies, J. Muglia, A. Schmittner, and E. Achterberg(2021)<br> 
 	<b>Constraining global marine iron source and scavenging fluxes with GEOTRACES dissolved iron measurements in an ocean biogeochemical model</b>
 	<div class="journal"><i>Global Biogeochemical Cycles</i> </div>
+	<div class="publinks">
+		<!a class="publinks" href="https://">html</a>
+		<a class="publinks" href="https://www.essoar.org/doi/pdf/10.1002/essoar.10505837.1">pdf</a>
+	</div>
+	
 </li>
 
 <h3>Published</h3>
