--- a/publications.html
+++ b/publications.html
@@ -61,7 +61,7 @@
 	<b>Constraining global marine iron source and scavenging fluxes with GEOTRACES dissolved iron measurements in an ocean biogeochemical model</b>
 	<div class="journal"><i>Global Biogeochemical Cycles</i> </div>
 	<div class="publinks">
-		<!a class="publinks" href="https://">html</a>
+		<a class="publinks" href="https://www.essoar.org/doi/abs/10.1002/essoar.10505837.1">preprint</a>
 		<a class="publinks" href="https://www.essoar.org/doi/pdf/10.1002/essoar.10505837.1">pdf</a>
 	</div>
 	
