--- a/publications.html
+++ b/publications.html
@@ -57,14 +57,21 @@
 <a class="publinks" href="#2020"> 2020 </a>
 
 <a id="in review"><h3>In Review / In Press</h3></a>
-<li>Somes, C., A. Dale, K. Wallmann, F. Scholz, W. Yao, A. Oschlies, J. Muglia, A. Schmittner, and E. Achterberg(2021)<br> 
+<li>Muglia, J., and A. Schmittner (2021)<br> 
+	<b>Carbon Isotope Constraints on Glacial Atlantic Meridional Overturning: Strength vs Depth</b>
+	<div class="journal"><i>Quaternary Science Reviews</i> </div>
+	<div class="publinks">
+		<a class="publinks" href="">preprint</a>
+		<a class="publinks" href="">pdf</a>
+	</div>
+</li>
+<li>Somes, C., A. Dale, K. Wallmann, F. Scholz, W. Yao, A. Oschlies, J. Muglia, A. Schmittner, and E. Achterberg (2021)<br> 
 	<b>Constraining global marine iron source and scavenging fluxes with GEOTRACES dissolved iron measurements in an ocean biogeochemical model</b>
 	<div class="journal"><i>Global Biogeochemical Cycles</i> </div>
 	<div class="publinks">
 		<a class="publinks" href="https://www.essoar.org/doi/abs/10.1002/essoar.10505837.1">preprint</a>
 		<a class="publinks" href="https://www.essoar.org/doi/pdf/10.1002/essoar.10505837.1">pdf</a>
 	</div>
-	
 </li>
 
 <h3>Published</h3>
