--- a/outreach.html
+++ b/outreach.html
@@ -48,7 +48,7 @@ How we know about climate change</a>
 <li>06-29/30-2016 Climate Change and Ocean Acidification: <a href="Outreach/TeacherWS_2016/index.html">
 A Workshop for Oregon Educators </a>
 
-<li>02-27-2016 <a href="http://calendar.oregonstate.edu/event/112332/">
+<li>02-27-2016 <a href="https://liberalarts.oregonstate.edu/winter-2016">
 The Paris Climate Agreement: Now What?  </a>
 
 <li>08-11-2015 Climate Change: <a href="Outreach/TeacherWS_2015/index.html">
