--- a/presentations.html
+++ b/presentations.html
@@ -46,6 +46,7 @@
 
 <h2>Scientific Presentations</h2>
 <ul>
+<li>08-02-2021 <b>Glacial Deoxygenation Driven by Increased Disequilibrium</b> CESM Paleoclimate Working Group Meeting. <a class="publinks" href="https://youtu.be/NHrsLINxdCY?t=7234"> recording</a>
 <li>05-12-2020 <b>Meridional Overturning and Mixing in the Glacial Ocean</b> CEOAS Physics of Oceans and Atmospheres Seminar. <a class="publinks" href="https://media.oregonstate.edu/media/t/1_db6so68i"> recording</a>
 <li>04-15-2020 <b>Modeling Tidal Mixing in the Glacial Ocean</b> CESM Ocean Modeling Group Meeting. <a class="publinks" href="http://www.cesm.ucar.edu/events/wg-meetings/2020/files/ocean/Schmittner.pdf"> pdf</a>
 <li>12-11-2018 <b>Air-Sea Disequilibrium Enhances Glacial Ocean Carbon Storage </b> American Geophysical Union Fall Meeting, San Francisco, USA. <a class="publinks" href="https://www.slideshare.net/AndreasSchmittner/airsea-disequilibrium-enhances-glacial-ocean-carbon-storage"> Poster pdf</a>
