--- a/publications.html
+++ b/publications.html
@@ -57,14 +57,15 @@
 <a class="publinks" href="#2020"> 2020 </a>
 
 <a id="in review"><h3>In Review / In Press</h3></a>
-<li>Muglia, J., and A. Schmittner (2021)<br> 
-	<b>Carbon Isotope Constraints on Glacial Atlantic Meridional Overturning: Strength vs Depth</b>
-	<div class="journal"><i>Quaternary Science Reviews</i> </div>
+<li>Kwon, E. Y., B. J. Tipple, A. Schmittner, and A. Timmermann (2021)<br> 
+	<b>Unprecedented Reversal of the Oceanic &delta;<sup>13</sup>C Gradient Due to Extreme Greenhouse Gas Emissions</b>
+	<div class="journal"><i>Proceedings of the National Academy of Sciences</i> </div>
 	<div class="publinks">
-		<a class="publinks" href="">preprint</a>
-		<a class="publinks" href="">pdf</a>
+		<a class="publinks" href=""></a>
 	</div>
 </li>
+
+
 <li>Somes, C., A. Dale, K. Wallmann, F. Scholz, W. Yao, A. Oschlies, J. Muglia, A. Schmittner, and E. Achterberg (2021)<br> 
 	<b>Constraining global marine iron source and scavenging fluxes with GEOTRACES dissolved iron measurements in an ocean biogeochemical model</b>
 	<div class="journal"><i>Global Biogeochemical Cycles</i> </div>
@@ -76,6 +77,17 @@
 
 <h3>Published</h3>
 <a id="2021"><h4>2021</h4></a>
+<li>Muglia, J., and A. Schmittner (2021)<br> 
+	<b>Carbon Isotope Constraints on Glacial Atlantic Meridional Overturning: Strength vs Depth</b>
+	<div class="journal"><i>Quaternary Science Reviews</i>,
+	 <a class="publinks" href="https://doi.org/10.1016/j.quascirev.2021.106844">doi: 10.1016/j.quascirev.2021.106844</div>
+	<div class="publinks">
+		<a class="publinks" href="https://authors.elsevier.com/a/1ceeF-4PR%7ER10">html</a>
+		<a class="publinks" href="https://andreasschmittner.github.io/pdf/M/muglia21qsr.pdf">pdf</a>
+		<a class="publinks" href="https://youtu.be/80C-vUgE2r0?t=6238">video</a>
+	</div>
+</li>
+
 <li>Cliff, E., S. Khatiwala, and A. Schmittner (2021)<br> 
 	<b>Glacial deep ocean deoxygenation driven by biologically mediated air–sea disequilibrium</b>
 	<div class="journal"><i>Nat Geosci</i>, 
