added Muglia & Schmittner (2021 QSR paper

--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -88,6 +88,18 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 
 <div id="publications" style="width:1100px;float:left">
 <a id="publications"><h2>Publications</h2></a>
+
+<li>Muglia, J., and A. Schmittner (2021)<br> 
+	<b>Carbon Isotope Constraints on Glacial Atlantic Meridional Overturning: Strength vs Depth</b>
+	<div class="journal"><i>Quaternary Science Reviews</i>,
+	 <a class="publinks" href="https://doi.org/10.1016/j.quascirev.2021.106844">doi: 10.1016/j.quascirev.2021.106844</div>
+	<div class="publinks">
+		<a class="publinks" href="https://authors.elsevier.com/a/1ceeF-4PR%7ER10">html</a>
+		<a class="publinks" href="https://andreasschmittner.github.io/pdf/M/muglia21qsr.pdf">pdf</a>
+		<a class="publinks" href="https://youtu.be/80C-vUgE2r0?t=6238">video</a>
+	</div>
+</li>
+
 <li>Cliff, E., S. Khatiwala, and A. Schmittner (2021)<br> 
 	<b>Glacial deep ocean deoxygenation driven by biologically mediated air–sea disequilibrium</b>
 	<div class="journal"><i>Nat Geosci</i>, 
@@ -132,12 +144,13 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 <ul>
 <li><a href="https://andreasschmittner.github.io/">Andreas Schmittner</a>, Principle Investigator<br>
 <li><a href="https://www.earth.ox.ac.uk/people/samar-khatiwala/">Samar Khatiwala</a>, Co-PI<br>
+<li><a href="https://scholar.google.com/citations?user=z2zyXTcAAAAJ&hl=en">Juan Muglia</a>, Collaborator<br>
 <li><a href="https://smile.oregonstate.edu/smile-staff">Jay Well</a>, SMILE<br>
 <li><a href="https://www.earth.ox.ac.uk/people/ellen-cliff/">Ellen Cliff</a>, Graduate Student<br>
 <li>Nathaniel Fillman, Graduate Student<br>
 </ul>
 </div><!--People-->
-last changed Oct 10, 2020
+last changed Feb 26, 2021
 <br>
 
 </div><!--container-->
