added blog link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ email: aschmitt(at)coas.oregonstate.edu<p></div>
 <li class="menue"><a class="menue" href="climate_change.html">Climate Change</a></li>
 <li class="menue"><a class="menue" href="outreach.html">Outreach</a></li>
 <li class="menue"><a class="menue" href="presentations.html">Presentations</a></li>
+<li class="menue"><a class="menue" href="https://andreasschmittner.github.io/blog/">Blog</a></li>
 </ul>
 </div><!--menue-->
 
@@ -80,7 +81,7 @@ email: aschmitt(at)coas.oregonstate.edu<p></div>
 </ul>
 </div><!--links-->
 
-<p>I'm a scientist interested in Earth's climate system as a whole. Most of my work is 
+<p>I'm a scientist interested in Earth's climate system. Most of my work is 
 focussed on the oceans, their physics, biology, chemistry and variability on decadal to millennial time 
 scales. I try to understand the causes for today's global deep overturning circulation, how and why it has 
 changed in the past, how it may change in the future due to natural or human influences, how it impacts climate, 
