added blog link on menue bar

--- a/publications.html
+++ b/publications.html
@@ -18,6 +18,7 @@
 <li class="menue"><a class="menue" href="climate_change.html">Climate Change</a></li>
 <li class="menue"><a class="menue" href="outreach.html">Outreach</a></li>
 <li class="menue"><a class="menue" href="presentations.html">Presentations</a></li>
+<li class="menue"><a class="menue" href="https://andreasschmittner.github.io/blog/">Blog</a></li>
 </ul>
 </div>
 
