--- a/teaching.html
+++ b/teaching.html
@@ -19,6 +19,7 @@
 <li class="menue"><a class="menue" href="climate_change.html">Climate Change</a></li>
 <li class="menue"><a class="menue" href="outreach.html">Outreach</a></li>
 <li class="menue"><a class="menue" href="presentations.html">Presentations</a></li>
+<li class="menue"><a class="menue" href="https://andreasschmittner.github.io/blog/">Blog</a></li>
 </ul>
 </div>
 
@@ -38,7 +39,7 @@ ATS 421/521<br>
 Credits: 4
 Taught: Spring 2015, Spring 2013, Winter 2011 (OC 599), Winter 2009 (OC 669), Winter 2007 (OC 669)<br>
 
-<li><h3><a href="Teaching/ATS320/index.html">The Changing Climate</h3></a>
+<li><h3>The Changing Climate</h3>
 ATS 320<br>
 Credits: 3
 Taught: Fall 2015, Fall 2014, Winter 2014, Spring 2012, Spring 2011<br>
