changed link to Bakker paper

--- a/publications.html
+++ b/publications.html
@@ -247,7 +247,7 @@
 <b>Centennial-scale Holocene climate variations amplified by Antarctic Ice Sheet discharge</b>
 <div class="journal"><i>Nature</i>, 541, 72–76, doi:10.1038/nature20582.</div>
 <div class="publinks">
-<a class="publinks" href="http://www.nature.com/nature/journal/vaop/ncurrent/full/nature20582.html"> html </a>
+<a class="publinks" href="https://www.nature.com/articles/nature20582"> html </a>
 <a class="publinks" href="http://rdcu.be/nLOC"> pdf </a>
 <a class="publinks" href="http://oregonstate.edu/ua/ncs/archives/2016/dec/new-study-shows-impact-antarctic-ice-sheet-climate-change"> Press Release </a>
 </div></li>
