--- a/climate_change.html
+++ b/climate_change.html
@@ -27,16 +27,17 @@
 
 <div id="links" style="float:right;width:300px;margin:0px 0px 0px 10px">
 <ul class="menueright">
-<li><a class="menueright" href="#science">Science</a></li>
+<li><a class="menueright" href="#activism">Activism</a></li>
+<li><a class="menueright" href="#art">Art</a></li>
 <li><a class="menueright" href="#blogs">Blogs</a></li>
 <li><a class="menueright" href="#communication">Communication</a></li>
-<li><a class="menueright" href="#teachers">For Teachers</a></li>
 <li><a class="menueright" href="#data">Data</a></li>
 <li><a class="menueright" href="#ethics">Ethics and Religion</a></li>
-<li><a class="menueright" href="#policy">Policy</a></li>
-<li><a class="menueright" href="#art">Art</a></li>
 <li><a class="menueright" href="#news">News</a></li>
+<li><a class="menueright" href="#policy">Policy</a></li>
+<li><a class="menueright" href="#science">Science</a></li>
 <li><a class="menueright" href="#skeptics">Skeptics</a></li>
+<li><a class="menueright" href="#teachers">For Teachers</a></li>
 <li><a class="menueright" href="#videos">Videos</a></li>
 </ul>
 </div>
@@ -45,19 +46,16 @@
 climate change accessible to (hopefully) everybody. I do not know all the sites
 in detail but I think they contain trustworthy information.</p>
 
-
-<h2><a id="science"> Science </a></h2>
+<a id="activism"><h2> Activism </h2></a>
 <ul>
-<li>Introduction to Climate Science <a href="http://library2.open.oregonstate.edu/climatechange/">Free Online Textbook</a>
-<li>Intergovernmental Panel on Climate Change <a href="http://www.ipcc.ch/">IPCC</a>: A summary of
-the peer-reviewed scientific literature is available as the 5th Assessment Report <a href="http://www.ipcc.ch/report/ar5/">(AR5)</a>.
-<li>National Academy of Sciences <a href="https://www.nap.edu/catalog/25733/climate-change-evidence-and-causes-update-2020">NAS</a>
-<li>American Meteorological Society <a href="https://www.ametsoc.org/index.cfm/ams/policy/policy-memos/the-dangers-and-consequences-of-climate-change/">AMS</a>
-<li><a href="http://www.globalchange.gov">US Global Change Research Program (National Climate Assessment)</a>
-<li>Oregon Climate Change Research Institute <a href="http://www.occri.net/">OCCRI</a>
-<li><a href="http://www.acia.uaf.edu/">Arctic Climate Impact Assessment</a> 
-<li><a href="http://science360.gov/series/degree/37c32dbf-21f1-4c3b-89ea-ac962cc6efb6">Videos</a> on Science of Climate Change from the National Science Foundation
-<li><a href="http://www.pbl.nl/en/publications/scientists-views-about-attribution-of-global-warming">Scientists' Views about Human Effects</a>
+<li><a href="https://www.littlecitizensforclimate.org"> Little Citizens for Climate</a>
+Young People Take Charge
+</ul>
+
+<a id="art"><h2> Art </h2></a>
+<ul>
+<li><a href="http://www.worldviewofglobalwarming.org"> World View of Global Warming </a>
+Global Warming Photos
 </ul>
 
 <h2><a id="blogs"> Blogs </a></h2>
@@ -79,6 +77,52 @@ Climate science and the public
 <li><a href="http://climatecommunication.org/">ClimateCommunication.org</a>
 </ul>
 
+<a id="data"><h2> Data Centers </h2></a>
+<ul>
+<li><a href="http://nsidc.org/">National Snow and Ice Data Center</a>
+<li><a href="https://www.ncei.noaa.gov/">National Center for Environmental Information</a> (NOAA)
+</ul>
+
+<a id="data"><h2> Ethics and Religion</h2></a>
+<ul>
+<li><a href="http://w2.vatican.va/content/francesco/en/encyclicals/documents/papa-francesco_20150524_enciclica-laudato-si.html">Pope Francis' encyclica</a>
+</ul>
+
+<a id="news"><h2> News </h2></a>
+<ul>
+<li><a href="https://publichealthonline.gwu.edu/blog/sources-for-climate-news/">53 Sources for Climate Change News </a>
+<li><a href="http://topics.nytimes.com/topics/news/science/topics/globalwarming/index.html">New
+York Times</a>
+</ul>
+
+<a id="policy"><h2> Policy </h2></a>
+<ul>
+<li><a href="http://www.pewclimate.org/">Pew Center on Climate Change</a> 
+<li><a href="http://www.ucsusa.org/global_warming/">Union of Concerned Scientists</a>
+<li><a href="http://www.unep.org/climatechange/">United Nations Environment Program</a>
+</ul>
+
+<h2><a id="science"> Science </a></h2>
+<ul>
+<li>Introduction to Climate Science <a href="https://open.oregonstate.education/climatechange">Free Online Textbook</a>
+<li>Intergovernmental Panel on Climate Change <a href="http://www.ipcc.ch/">IPCC</a>: A summary of
+the peer-reviewed scientific literature is available as the 5th Assessment Report <a href="http://www.ipcc.ch/report/ar5/">(AR5)</a>.
+<li>National Academy of Sciences <a href="https://www.nap.edu/catalog/25733/climate-change-evidence-and-causes-update-2020">NAS</a>
+<li>American Meteorological Society <a href="https://www.ametsoc.org/index.cfm/ams/policy/policy-memos/the-dangers-and-consequences-of-climate-change/">AMS</a>
+<li><a href="http://www.globalchange.gov">US Global Change Research Program (National Climate Assessment)</a>
+<li>Oregon Climate Change Research Institute <a href="http://www.occri.net/">OCCRI</a>
+<li><a href="http://www.acia.uaf.edu/">Arctic Climate Impact Assessment</a> 
+<li><a href="http://science360.gov/series/degree/37c32dbf-21f1-4c3b-89ea-ac962cc6efb6">Videos</a> on Science of Climate Change from the National Science Foundation
+<li><a href="http://www.pbl.nl/en/publications/scientists-views-about-attribution-of-global-warming">Scientists' Views about Human Effects</a>
+</ul>
+
+<a id="skeptics"><h2> Skeptics </h2></a>
+<ul>
+<li><a href="http://www.grist.org/article/series/skeptics/">How to Talk to a Climate
+Skeptic:</a> Responses to the most common skeptical arguments on global warming
+<li><a href="http://www.opb.org/news/article/forecast-cloudy/">Forecast Cloudy:</a> OPB documentary
+about climate changes skepticism among TV and state meteorologists
+</ul>
 
 <h2><a id="teachers"> Resources for Educators </a></h2>
 <ul>
@@ -93,49 +137,7 @@ Resources for Earth and Space Science Education
 <li><a href="http://pulitzercenter.org/nytclimate">Lesson Plans from "Losing Earth," The New York Times Magazine's special issue on climate change from the Pulitzer Center </a>
 </ul>
 
-
-<a id="data"><h2> Data Centers </h2></a>
-<ul>
-<li><a href="http://nsidc.org/">National Snow and Ice Data Center</a>
-<li><a href="https://www.ncei.noaa.gov/">National Center for Environmental Information</a> (NOAA)
-</ul>
-
-
-<a id="data"><h2> Ethics and Religion</h2></a>
-<ul>
-<li><a href="http://w2.vatican.va/content/francesco/en/encyclicals/documents/papa-francesco_20150524_enciclica-laudato-si.html">Pope Francis' encyclica</a>
-</ul>
-
-
-<a id="policy"><h2> Policy </h2></a>
-<ul>
-<li><a href="http://www.pewclimate.org/">Pew Center on Climate Change</a> 
-<li><a href="http://www.ucsusa.org/global_warming/">Union of Concerned Scientists</a>
-<li><a href="http://www.unep.org/climatechange/">United Nations Environment Program</a>
-</ul>
-
-<a id="art"><h2> Art </h2></a>
-<ul>
-<li><a href="http://www.worldviewofglobalwarming.org"> World View of Global Warming </a>
-Global Warming Photos
-</ul>
-
-<a id="news"><h2> News </h2></a>
-<ul>
-<li><a href="https://publichealthonline.gwu.edu/blog/sources-for-climate-news/">53 Sources for Climate Change News </a>
-<li><a href="http://topics.nytimes.com/topics/news/science/topics/globalwarming/index.html">New
-York Times</a>
-</ul>
-
-<a id="skeptics"><h2> Skeptics </h2></a>
-<ul>
-<li><a href="http://www.grist.org/article/series/skeptics/">How to Talk to a Climate
-Skeptic:</a> Responses to the most common skeptical arguments on global warming
-<li><a href="http://www.opb.org/news/article/forecast-cloudy/">Forecast Cloudy:</a> OPB documentary
-about climate changes skepticism among TV and state meteorologists
-</ul>
-
-<a id="videos"><h2>Videos:</h2></a>
+<a id="videos"><h2> Videos </h2></a>
 <ul>
 <li><a href="http://www.youtube.com/watch?v=x1SgmFa0r04">Movie of Carbon Dioxide in the Atmosphere by NASA</a>
 <li><a href="http://www.youtube.com/watch?v=xusdWPuWAoU&amp;feature=youtu.be">Movie of
@@ -150,5 +152,5 @@ if you know if additional sites.<br>
 
 <a href="https://andreasschmittner.github.io/">back</a><br>
 
-Last updated Apr 16, 2019</p>
+Last updated Mar 5, 2021</p>
 </div>
