added LGM Mixing project page

--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,14 @@
 <div><h2>Current Projects</h2>
 
 <ul>
+<li><h3><a href="Projects/LGM_mixing">Collaborative Research: Mixing and the Meridional Overturning
+Circulation in the Modern and Glacial Ocean</a></h3>
+Jointly funded by: National Science Foundation's Physical Oceanography and Marine Geology and Geophysics Programs<br>
+Award: 2049352<br>
+Period: 02/01/2021 to 01/31/2024<br>
+Amount: $612,636,</br>
+PIs: Schmittner, Danabasoglu, Bachman<br>
+
 <li><h3><a href="Projects/Nd">Modeling the Ocean Distribution of Neodymium Isotopes: Testing the Bottom-Up Hypothesis</a></h3>
 Jointly funded by: National Science Foundation's Chemical Oceanography and Marine Geology and Geophysics Programs<br>
 Award: 2022461<br>
