--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -50,6 +50,7 @@ Public views of the causes of climate change are much different from those of cl
 
 <div>
 <h2> Funded by </h2> <p>the National Science Foundation's Physical Oceanography Program</p>
+<a href="Project_Description_no_endnote.pdf">Project Description</a>
 </div>
 
 <div id="people" style="width:1100px;float:left">
@@ -62,6 +63,7 @@ Public views of the causes of climate change are much different from those of cl
 <li><a href="https://www.nbi.ku.dk/english/staff/?pure=en/persons/437464">Markus Jochum</a>, Collaborator<br>
 <li><a href="https://ceoas.oregonstate.edu/people/flaxen-conway">Flaxen Conway</a>, Collaborator<br>
 <li><a href="https://ceoas.oregonstate.edu/people/abby-metzger">Abby Metzger</a>, Collaborator<br>
+<li><a href="https://stem.oregonstate.edu/people/julie-risien">Julie Risien</a>, Collaborator<br>
 <li><a href="https://ceoas.oregonstate.edu/people/desirae-wrathall">Desirae Wrathall</a>, Collaborator<br>
 </ul>
 </div><!--People-->
