fixed link in LGM mixing page

--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -50,7 +50,7 @@ Public views of the causes of climate change are much different from those of cl
 
 <div>
 <h2> Funded by </h2> <p>the National Science Foundation's Physical Oceanography Program</p>
-<a href="Project_Description_no_endnote.pdf">Project Description</a>
+<p><a href="Project_Description_no_endnote.pdf">Project Description</a></p>
 </div>
 
 <div id="people" style="width:1100px;float:left">
