--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -17,6 +17,7 @@ Circulation in the Modern and Glacial Ocean</h1>
 <ul class="menue">
 <li class="menue"><a class="menue" href="http://people.oregonstate.edu/~schmita2">Andreas' Home</a></li>
 <li class="menue"><a class="menue" href="http://people.oregonstate.edu/~schmita2/projects.html">Andreas' Projects</a></li>
+<li class="menue"><a class="menue" href="#opportunity">Opportunity</a></li>
 <li class="menue"><a class="menue" href="#results">Results</a></li>
 <li class="menue"><a class="menue" href="#publications">Publications</a></li>
 <li class="menue"><a class="menue" href="#presentations">Presentations</a></li>
@@ -42,6 +43,11 @@ The expanded set of model experiments has the potential to advance our understan
 
 Public views of the causes of climate change are much different from those of climate scientists. Here we will conduct public meetings and discussions with climate scientists designed to reduce this gap, increase climate literacy and foster interactions between the public and scientists. A graduate student will design and evaluate these activities. An early-career scientist will be involved in an interdisciplinary project at the interface of physical oceanography, paleoceanography and biogeochemistry, and receive science, and science communication training. A hands-on activity for visitors of a local science museum will engage family groups in oceanography and thus enhance informal STEM learning. 
 </p>
+
+<div id="opportunity" style="width:1100px;float:left">
+<a id="opportunity"><h2>Opportunity for Post Doctoral Researcher</h2></a>
+We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a background in climate science, ocean modeling or a related field and experience in coding please <a href="https://andreasschmittner.github.io/">contact the PI</a>. The positon is not officially announced yet. More details will be added here soon.
+</div><!--Opportunity-->
 
 <div id="publications" style="width:1100px;float:left">
 <a id="publications"><h2>Publications</h2></a>
