fixed postdoc opportunity

--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -46,7 +46,7 @@ Public views of the causes of climate change are much different from those of cl
 
 <div id="opportunity" style="width:1100px;float:left">
 <a id="opportunity"><h2>Opportunity for Post Doctoral Researcher</h2></a>
-We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a background in climate science, ocean modeling or a related field and experience in coding please <a href="https://andreasschmittner.github.io/">contact the PI</a>. The positon is not officially announced yet. More details will be added here soon.
+<p>We're looking for a postdoctoral researcher to work on this project for 2.5 years. If you have a background in climate science, ocean modeling or a related field and experience in coding please <a href="https://andreasschmittner.github.io/">contact the PI</a>. The positon is not officially announced yet. More details will be added here soon.</p>
 </div><!--Opportunity-->
 
 <div id="publications" style="width:1100px;float:left">
