added lectures to ATS201

--- a/Teaching/ATS201/index.html
+++ b/Teaching/ATS201/index.html
@@ -33,16 +33,16 @@
  </div>
 
 <h2> Introduction </h2>
- <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/chapter/preface/">Textbook Chapter: Preface</a> 
+ <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/front-matter/preface/">Textbook Chapter: Preface</a> 
  <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_ji82ybj5">Recorded Lecture: Introduction</a>
 
  <div><a id="Weather"><h2>Weather</h2></a>
  <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/chapter/weather-and-climate/">Textbook Chapter: Weather</a>
-
- <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/391241/sp/39124100/embedIframeJs/uiconf_id/22119142/partner_id/391241?iframeembed=true&playerId=kaltura_player&entry_id=1_gog4bpe6&flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[hotspots.plugin]=1&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_56baracb" width="554" height="366" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_gog4bpe6">Recorded Lecture: Weather</a>
  </div>
 
  <div><a id="Observations"><h2>Observations</h2></a>
  <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/chapter/observations/">Textbook Chapter: Observations</a></li>
-
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_hzklcqah">Recorded Lecture: Observations Atmosphere & Cryosphere</a>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_mnid58pk">Recorded Lecture: Observations Ocean & Carbon</a>
 </div>
