--- a/Teaching/ATS201/index.html
+++ b/Teaching/ATS201/index.html
@@ -33,16 +33,16 @@
  </div>
 
 <h2> Introduction </h2>
- <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/front-matter/preface/">Textbook Chapter: Preface</a> 
- <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_ji82ybj5">Recorded Lecture: Introduction</a>
+ <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/front-matter/preface/">Textbook Chapter: Preface</a></h3>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_ji82ybj5">Recorded Lecture: Introduction</a></h3>
 
  <div><a id="Weather"><h2>Weather</h2></a>
- <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/chapter/weather-and-climate/">Textbook Chapter: Weather</a>
- <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_gog4bpe6">Recorded Lecture: Weather</a>
+ <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/chapter/weather-and-climate/">Textbook Chapter: Weather</a></h3>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_gog4bpe6">Recorded Lecture: Weather</a></h3>
  </div>
 
  <div><a id="Observations"><h2>Observations</h2></a>
- <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/chapter/observations/">Textbook Chapter: Observations</a></li>
- <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_hzklcqah">Recorded Lecture: Observations Atmosphere & Cryosphere</a>
- <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_mnid58pk">Recorded Lecture: Observations Ocean & Carbon</a>
+ <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/chapter/observations/">Textbook Chapter: Observations</a></li></h3>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_hzklcqah">Recorded Lecture: Observations Atmosphere & Cryosphere</a></h3>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_mnid58pk">Recorded Lecture: Observations Ocean & Carbon</a></h3>
 </div>
