--- a/teaching.html
+++ b/teaching.html
@@ -39,6 +39,11 @@ ATS 421/521<br>
 Credits: 4
 Taught: Spring 2015, Spring 2013, Winter 2011 (OC 599), Winter 2009 (OC 669), Winter 2007 (OC 669)<br>
 
+<li><h3><a href="Teaching/ATS201/index.html">Climate Science</a></h3>
+ATS 201<br>
+Credits: 4
+Taught: Spring 2021 (e-campus), Spring 2020, Winter 2018, Spring 2017<br>
+
 <li><h3>The Changing Climate</h3>
 ATS 320<br>
 Credits: 3
