added channel to ATS201

--- a/Teaching/ATS201/index.html
+++ b/Teaching/ATS201/index.html
@@ -29,6 +29,7 @@
  <div id="links" style="float:right;width:150px">
  <ul class="menueright">
  <li><a class="menueright" href="https://open.oregonstate.education/climatechange/">Textbook</a></li>
+<li><a class="menueright" href="https://media.oregonstate.edu/channel/Climate%2BScience%2B%2528ATS%2B201%2BSpring%2B2021%2529/208055103">Recordings</a></li>
  </ul>
  </div>
 
