--- a/Teaching/ATS201/index.html
+++ b/Teaching/ATS201/index.html
@@ -47,3 +47,12 @@
  <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_hzklcqah">Recorded Lecture: Observations Atmosphere & Cryosphere</a></h3>
  <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_mnid58pk">Recorded Lecture: Observations Ocean & Carbon</a></h3>
 </div>
+
+ <div><a id="Paleoclimate"><h2>Paleoclimate</h2></a>
+ <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/chapter/paleoclimate">Textbook Chapter: Paleoclimate</a></li></h3>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_dmvsib3f">Recorded Lecture: Holocene</a></h3>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_55k48whr">Recorded Lecture: Ice Ages</a></h3>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_05c3juwg">Recorded Lecture: Paleoclimate: Milankovitch Theory</a></h3>
+</div>
+
+
