--- a/Teaching/ATS201/index.html
+++ b/Teaching/ATS201/index.html
@@ -48,11 +48,11 @@
  <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_mnid58pk">Recorded Lecture: Observations Ocean & Carbon</a></h3>
 </div>
 
- <div><a id="Paleoclimate"><h2>Paleoclimate</h2></a>
- <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/chapter/paleoclimate">Textbook Chapter: Paleoclimate</a></li></h3>
- <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_dmvsib3f">Recorded Lecture: Holocene</a></h3>
- <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_55k48whr">Recorded Lecture: Ice Ages</a></h3>
- <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_05c3juwg">Recorded Lecture: Paleoclimate: Milankovitch Theory</a></h3>
+ <div><a id="Theory"><h2>Theory</h2></a>
+ <h3><a class="publinks" href="https://open.oregonstate.education/climatechange/chapter/theory">Textbook Chapter: Theory</a></li></h3>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_ec2syrhp">Recorded Lecture: Radiation</a></h3>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_4dxwmhtg">Recorded Lecture: Greenhouse</a></h3>
+ <h3><a class="publinks" href="https://media.oregonstate.edu/media/t/1_1l6k4n3g">Recorded Lecture: Energy</a></h3>
 </div>
 
 
