added Mengis et al. 2020 to publications

--- a/Projects/Nd/index.html
+++ b/Projects/Nd/index.html
@@ -59,6 +59,14 @@
 
 <div id="publications" style="width:1100px;float:left">
 <a id="publications"><h2>Publications</h2></a>
+<li>Mengis, N., D. P. Keller, A. MacDougall, M. Eby, N. Wright, K. J. Meissner, A. Oschlies, A. Schmittner, H. D. Matthews, and K. Zickfeld (2020)<br> 
+<b>Evaluation of the University of Victoria Earth System Climate Model version 2.10 (UVic ESCM 2.10)</b> 
+<div class="journal"><i>Geosci. Model Dev.</i>, 13, 4183–4204, https://doi.org/10.5194/gmd-13-4183-2020.</div>
+<div class="publinks">
+<a class="publinks" href="https://doi.org/10.5194/gmd-13-4183-2020">html</a>
+<a class="publinks" href="https://gmd.copernicus.org/articles/13/4183/2020/gmd-13-4183-2020.pdf">pdf</a>
+</div></li>
+
 <li>Du, J., B. A. Haley and A. C. Mix (2020)<br>
 <b>Evolution of the Global Overturning Circulation since the Last Glacial Maximum based on marine authigenic neodymium isotopes</b>
 <div class="journal"><i>Quat. Sci. Rev.</i>, 241, 106396, doi: 10.1016/j.quascirev.2020.106396</div>
