--- a/index.html
+++ b/index.html
@@ -90,13 +90,12 @@ current projects. I develop, improve, analyze, and use numerical (computer) mode
 available and free for everybody do download and use. Click on the MODELS link above or contact me if you're 
 interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/climatevoices/schmittner/"> Here </a> is an interview about my life and career as part of OSU's Voices of a Warming Planet project.</p>
 
-<div><a id="opportunity"><h2>Opportunity</h2></a>
-<p>I'm looking for a graduate student interested in working on <a href="Projects/Nd/">modeling global ocean circulation and the cycling of Neodymium</a>. 
-If you have a good physical sciences
-and math background, if you're interested in numerical modeling, climate and paleoceanography this is the project 
-for you. Contact me for questions and/or apply to our graduate program in 
-<a class="publinks" href="https://ceoas.oregonstate.edu/how-apply">Ocean, Earth, and 
-Atmospheric Sciences</a>.</p>
+<div><a id="opportunity"><h2>Opportunities</h2></a>
+<p>I'm looking for 
+	<ul>
+	<li>a <b>graduate student</b> interested in working on <a href="Projects/Nd/">modeling global ocean circulation and the cycling of Neodymium</a>. If you have a good physical sciences and math background, if you're interested in numerical modeling, climate and paleoceanography this is the project for you. Contact me for questions and/or apply to our graduate program in <a class="publinks" href="https://ceoas.oregonstate.edu/how-apply">Ocean, Earth, and Atmospheric Sciences</a>.
+	<li>a <b>post-doctoral researcher</b> interested in <a href="Projects/LGM_mixing/">modeling mixing</a> in the ocean and its effects on the global circulation in modern and ice-age climates. If you have experience in numerical modeling please contact me.
+	</p>
 </div><!--opportunity-->
 
 <h2>Just Published</h2>
