added AA ice ocean project

--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
 <a id="in review"><h3>In Review / In Press</h3></a>
 <li>Kwon, E. Y., B. J. Tipple, A. Schmittner, and A. Timmermann (2021)<br> 
 	<b>Unprecedented Reversal of the Oceanic &delta;<sup>13</sup>C Gradient Due to Extreme Greenhouse Gas Emissions</b>
-	<div class="journal"><i>Proceedings of the National Academy of Sciences</i> </div>
+	<div class="journal"><i>Nature Communications</i> </div>
 	<div class="publinks">
 		<a class="publinks" href=""></a>
 	</div>
