--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,13 @@
 <div><h2>Current Projects</h2>
 
 <ul>
+<li><h3><a href="Projects/AA_ice_ocean">Investigating Antarctic Ice Sheet-Ocean-Carbon Cycle Interactions During the Last Deglaciation</a></h3>
+Funded by: National Science Foundation's Office of Polar Programs<br>
+Award: <br>
+Period: <br>
+Amount: </br>
+PIs: Schmittner, Clark, Haight<br>
+
 <li><h3><a href="Projects/LGM_mixing">Collaborative Research: Mixing and the Meridional Overturning
 Circulation in the Modern and Glacial Ocean</a></h3>
 Jointly funded by: National Science Foundation's Physical Oceanography and Marine Geology and Geophysics Programs<br>
